# workshop-mcp-abbyy-bank

./: .gitignore  LICENSE  README.md  TUTORIAL.md
exercise-reference/1-foundation/: index.ts
exercise-reference/1-foundation/solution/: index.ts
exercise-reference/2-tools/: index.ts
exercise-reference/2-tools/solution/: index.ts
exercise-reference/3-docai/: README-inspector.md
exercise-reference/3-docai/solution/: index.ts
exercise-reference/4-refactor/solution/: index.ts
exercise-reference/5-claude/: claude-instructions.md  index.ts  tools.ts
exercise-reference/5-claude/solution/: tools.ts
exercise-reference/6-resources-prompts/: resources.ts
exercise-reference/6-resources-prompts/solution/: resources.ts
exercise-reference/completed/: tsconfig.json
exercise-reference/completed/src/: documentAI.ts  index.ts  tools.ts
py/: README.md  requirements.txt
py/exercise-reference/: README.md
py/exercise-reference/1-foundation/: README.md  index.py  pyproject.toml
py/exercise-reference/1-foundation/solution/: index.py
py/exercise-reference/2-tools/: README.md  index.py  pyproject.toml
py/exercise-reference/2-tools/solution/: index.py
py/exercise-reference/3-docai/: README.md  document_ai.py  index.py  pyproject.toml  tools.py
py/exercise-reference/3-docai/solution/: document_ai.py  index.py
py/exercise-reference/4-refactor/: README.md  document_ai.py  index.py  pyproject.toml
py/exercise-reference/4-refactor/solution/: index.py
py/exercise-reference/5-claude/: README.md  document_ai.py  index.py  pyproject.toml  tools.py
py/exercise-reference/5-claude/solution/: index.py
py/exercise-reference/6-resources-prompts/: README.md  prompts.py  pyproject.toml  resources.py
py/exercise-reference/6-resources-prompts/solution/: index.py  prompts.py
py/exercise-reference/completed/: README.md  __init__.py  document_ai.py  index.py  prompts.py  pyproject.toml  requirements.txt  resources.py  test_server.py  tools.py
py/exercise-reference/completed/src/: index.py  prompts.py
py/workspace/: index.py  pyproject.toml
ts/exercise-reference/3-docai/: documentAI.ts  index.ts
ts/exercise-reference/4-refactor/: index.ts  tools.ts
ts/exercise-reference/4-refactor/solution/: index.ts  tools.ts
ts/exercise-reference/5-claude/: tools.ts
ts/exercise-reference/6-resources-prompts/: prompts.ts  resources.ts
ts/exercise-reference/completed/: package-lock.json  package.json
(+6 files in other folders)
