[project]
name = "abbyy-bank-mcp-resources-prompts"
version = "1.0.0"
description = "ABBYY Bank MCP server - Resources and Prompts Exercise"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "abbyy-document-ai>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [] 
