[project]
name = "abbyy-bank-mcp"
version = "1.0.0"
description = "ABBYY Bank MCP server for bank account onboarding"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "python-dotenv>=1.0.0",
    "abbyy-document-ai>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [] 
